--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -365,3 +365,29 @@ li.fw-flash-message {
     box-shadow: 0px 0px 0px rgba(255, 255, 255, 0);
     min-height: 300px;
 }
+#about {
+  padding: 100px 0;
+  color: rgb(255,255,255);
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#20a6bb+0,25bad0+50 */
+  background: rgb(32,166,187); /* Old browsers */
+  background: -moz-linear-gradient(top, rgb(255,255,255) 0%, rgba(37,186,208,1) 50%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgb(255,255,255) 0%, rgba(37,186,208,1) 50%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgb(255,255,255) 0%, rgba(37,186,208,1) 50%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#20a6bb', endColorstr='#25bad0', GradientType=0 ); /* IE6-9 */
+}
+#about h2 {
+  color: rgb(255,255,255);
+}
+#about h4 {
+  color: #fff;
+}
+#about .about-text {
+  margin-left: 10px;
+}
+#about p {
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+.section-title {
+  padding: 25px 0 60px 0;
+}
