--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,28 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Cytocean</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-</head>
 <body id="top">
 
 <%= render 'menu'%>
 
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="max-height: 80%; max-width: 100%;">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="/assets/bg_01.jpg" alt="First slide" style="max-height: 100%; max-width: 100%;">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/assets/bg_04.jpg" alt="Second slide" style="max-height: 100%; max-width: 100%;">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/assets/bg_03.jpg" alt="Third slide" style="max-height: 100%; max-width: 100%;">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
 <div class="wrapper bgded bg_2" >
   <div class="hoc split clear">
@@ -110,5 +124,3 @@
 
 <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
 </body>
-</html>
-<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
