--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -31,7 +31,7 @@
                         <i class="fa fa-envelope"><span>youremail@mail.com</span></i>
                     </div>
                     <div id="map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15551.80876525875!2d80.2630019!3d12.9749097!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x89ab9c5f88383a03!2sMarutham+Apartments!5e0!3m2!1sen!2sin!4v1527873781000" width="500" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15551.80876525875!2d80.2630019!3d12.9749097!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x89ab9c5f88383a03!2sMarutham+Apartments!5e0!3m2!1sen!2sin!4v1527873781000" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                                 <div class="col-sm-12">
                                     <input type="subject" class="form-control" id="subject" placeholder="Subject *">
                                     <div class="text_area">
-                                        <textarea style="height: 300px;" name="Message" id="msg" class="form-control" cols="30" rows="8" placeholder="Message"></textarea>
+                                        <textarea style="height: 300px; width: 100%" name="Message" id="msg" class="form-control" cols="30" rows="8" placeholder="Message"></textarea>
                                     </div>
                                     <button type="submit" class="btn custom-btn" data-loading-text="Loading...">Send</button>
                                 </div>
