--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<body id="top">
+<body>
 
 <%= render 'menu'%>
 
@@ -24,20 +24,20 @@
   </a>
 </div>
 
-<div class="wrapper bgded bg_2" >
+<!-- <div class="wrapper bgded bg_2" >
   <div class="hoc split clear">
     <article> 
       <p class="nospace font-xs bold">Laoreet arcu vitae imperdiet</p>
       <h6 class="heading">Tellus in pretium lacinia</h6>
       <p class="btmspace-30">Nec scelerisque diam lobortis ut phasellus ex orci posuere mollis tellus id lacinia pharetra dolor duis facilisis consequat elit in feugiat justo.</p>
       <div class="group">
-        <figure class="one_third first"><%= image_tag("demo/320x220.png") %>
+        <figure class="one_third first"><%#= image_tag("demo/320x220.png") %>
           <figcaption>Pulvinar</figcaption>
         </figure>
-        <figure class="one_third"><%= image_tag("demo/320x220.png") %>
+        <figure class="one_third"><%#= image_tag("demo/320x220.png") %>
           <figcaption>Auctor</figcaption>
         </figure>
-        <figure class="one_third"><%= image_tag("demo/320x220.png") %>
+        <figure class="one_third"><%#= image_tag("demo/320x220.png") %>
           <figcaption>Donec</figcaption>
         </figure>
       </div>
@@ -49,7 +49,7 @@
       </footer>
     </article>
   </div>
-</div>
+</div> -->
 <div class="wrapper bgded overlay bg_3">
   <div id="cta" class="hoc clear"> 
     <article>
