--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -9,10 +9,10 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-md-6"> 
+      <div class="col-lg-6 col-md-6 col-xs-12 "> 
         <img src="/assets/bg_01.jpg" class="img-responsive" alt=""> 
       </div>
-      <div class="col-xs-12 col-md-6">
+      <div class="col-lg-6 col-md-6 col-xs-12">
         <div class="about-text">
           <h4>Who We Are</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo.</p>
